# Nuxt3-WebAssembly

./: .gitignore  nuxt.config.ts  package.json
docs/: 200.html  404.html
docs/_nuxt/: entry.8780e279.js  entry.984d3c51.js  error-404.5669fa14.js  error-404.f904327c.js  error-500.0c5c4e25.js  error-500.46ed3356.js  error-component.b6fcd52b.js  error-component.f214a324.js  index.08811f6a.js  index.62c0bd71.js  pulldown-cmark.3ae07b3e.js  pulldown-cmark.641ce2be.css  pulldown-cmark.769e73b7.js  pulldown-cmark.78b94c34.css  pulldown_cmark.60f9a7ad.js  pulldown_cmark_bg.a81adb85.wasm  trial.09548428.js
pages/: index.vue  pulldown-cmark.vue
public/wasm/pulldown-cmark/: Cargo.toml
wasm/pulldown-cmark/src/: lib.rs
wasm/trial/: Cargo.toml
