[package]
name = "pulldown-cmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
js-sys = "0.3.60"
wasm-bindgen = "0.2.83"
pulldown-cmark = { version = "0.9.2", default-features = false }

[dependencies.web-sys]
features = [
  'Window',
]
version = "0.3.60"

[lib]
crate-type = ["cdylib", "rlib"]